--- a/style.css
+++ b/style.css
@@ -27,3 +27,12 @@
 #1{
     background-color: white;
 }
+.widthside{
+    width:auto;
+}
+#agline{
+    text-align: center;
+}
+.sizeing{
+    size: 100px;
+}
